# bazel-test

./: README.md  angular.json  angular.json.bak  package-lock.json  package.json
src/: BUILD.bazel  main.dev.ts
src/app/: BUILD.bazel  app.component.spec.ts
src/app/comp1/: BUILD.bazel
